[tool.pdm]
[tool.pdm.dev-dependencies]
example = [
    "pyside6>=6.5.0",
]
dev = [
    "mypy>=1.1.1",
    "ruff>=0.0.260",
]

[project]
name = "pyside-callbacks"
version = "0.1.1"
description = "Use decorators to simplify using UI creation flow for PySide"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Spencer Chang", email = "spencer@sycee.xyz"},
]
requires-python = ">=3.10,<3.12"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development",
  "Typing :: Typed",
]
dependencies = [
]
urls = {repository = "https://github.com/schang412/pyside-callbacks"}

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61",
  "wheel",
]

[tool.setuptools]
packages = ["pyside_callbacks", "pyside_callbacks_mypy"]

[tool.setuptools.package-data]
pyside_callbacks = ["py.typed"]
pyside_callbacks_mypy = ["signals.toml"]

[tool.ruff]
target-version = "py310"
select = [
    "E",
    "F",
    "W",
    "YTT",
    "UP",
    "TCH",
    "TID",
    "I",
    "N",
    "ANN",
    "PIE"
]
ignore = [
    "ANN101",  # Missing type annotation for `self` in method
    "ANN401"   # Dynamically typed expressions (typing.Any) are disallowed
]
exclude = ["main_win.py"]
line-length = 120

[tool.ruff.isort]
force-single-line = true
force-sort-within-sections = true
